--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "postcss": "^8",
+    "release-it": "^18.1.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
