--- a/package.json
+++ b/package.json
@@ -14,19 +14,27 @@
   },
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@remixicon/react": "^4.6.0",
+    "ahooks": "^3.8.4",
     "antd": "^5.24.1",
+    "dayjs": "^1.11.13",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "lodash-es": "^4.17.21",
     "next": "15.1.7",
     "prettier": "^3.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sass": "^1.85.0",
+    "store": "^2.0.12",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.0",
     "@commitlint/config-conventional": "^19.6.0",
     "@release-it/conventional-changelog": "^10.0.0",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -41,7 +49,6 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json}": [
-     
       "prettier --write"
     ]
   }
