--- a/package.json
+++ b/package.json
@@ -13,21 +13,26 @@
     "release": "release-it"
   },
   "dependencies": {
-    "@ant-design/nextjs-registry": "^1.0.2",
-    "@remixicon/react": "^4.6.0",
-    "ahooks": "^3.8.4",
-    "antd": "^5.24.1",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-prettier": "^5.2.3",
-    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "framer-motion": "^11.13.1",
     "lodash-es": "^4.17.21",
+    "lucide-react": "^0.468.0",
     "next": "15.1.7",
-    "prettier": "^3.5.1",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.85.0",
     "store": "^2.0.12",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -40,10 +45,15 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.2.10",
     "postcss": "^8",
+    "prettier": "^3.5.1",
     "release-it": "^18.1.2",
+    "sass": "^1.85.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
