--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "release": "release-it"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
+    "@prisma/client": "^6.4.0",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-table": "^8.21.2",
+    "ahooks": "^3.8.4",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
@@ -27,12 +33,17 @@
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.468.0",
     "next": "15.1.7",
+    "next-intl": "^3.26.4",
     "next-themes": "^0.4.4",
+    "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^2.0.0",
     "store": "^2.0.12",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -52,6 +63,7 @@
     "lint-staged": "^15.2.10",
     "postcss": "^8",
     "prettier": "^3.5.1",
+    "prisma": "^6.4.0",
     "release-it": "^18.1.2",
     "sass": "^1.85.0",
     "tailwindcss": "^3.4.1",
