--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^11.13.1",
     "lodash-es": "^4.17.21",
@@ -58,6 +59,7 @@
     "@commitlint/config-conventional": "^19.6.0",
     "@release-it/conventional-changelog": "^10.0.0",
     "@types/lodash-es": "^4.17.12",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
